[workspace]
resolver = "2"
exclude = [
    "examples/cross_service",
    "examples/test-utils",
    "examples/lambda",
    "examples/examples",
    "examples/webassembly",
    "tests/telemetry",
    "tests/no-default-features",
    "tests/webassembly"
]
members = [
    "sdk/bedrock",
    "sdk/bedrockagent",
    "sdk/bedrockagentruntime",
    "sdk/bedrockdataautomation",
    "sdk/bedrockdataautomationruntime",
    "sdk/bedrockruntime",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }